external-crates/move/crates/move-compiler/tests/move_2024/parser/ability_modifier_postfix_missing_commas.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/ability_modifier_postfix_missing_commas.move:3:36
  │
3 │     public struct Foo {} has store copy;
  │                                    ^^^^
  │                                    │
  │                                    Unexpected 'copy'
  │                                    Expected one of: ',' or ';'

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/ability_modifier_postfix_missing_commas.move:5:1
  │
5 │ 
  │ ^
  │ 
  │ Unexpected end-of-file
  │ Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', 'struct', or 'enum'
